fix spacing issue inside .uc-container.inner.row

--- a/sub/UC-Clicker/css/main.css
+++ b/sub/UC-Clicker/css/main.css
@@ -43,6 +43,11 @@ body {
     padding: 5px;
 }
 
+/* fix retarded spacing issue */
+.uc-container .inner .row {
+    margin-bottom: 0;
+}
+
 .invisible {
     display: none !important;
 }
